# compiler_frontend

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
ast/: analyze_util.cpp  analyze_util.h  analyzer.cpp  analyzer.h  declarations.cpp  declarations.h  interface.cpp  interface.h  parser_methods.cpp  parser_methods.h  util.cpp  util.h  util_methods.cpp  util_methods.h
ast/data/: abstract_data.cpp  abstract_data.h  ast_nodes.cpp  ast_nodes.h  data_maps.cpp  data_maps.h  expr_types.cpp  node_defs.h  node_interfaces.cpp  node_interfaces.h
ast/parser_methods/: declarations.cpp  declarations.h  expression.cpp  expression.h  operator.cpp  operator.h  program.cpp  program.h  statement.cpp  statement.h
ast/validator/: validator.cpp  validator.hpp
interface/: argument_parser.cpp  argument_parser.h  file_reader.cpp  file_reader.h  llvm_build.cpp  llvm_build.hpp
lexer/: derive_lex.cpp  derive_lex.h  lex.cpp  lex.h  literal_cache.cpp  literal_cache.h
lib/: libc.on  libc_base.on  stdio.on
llvm-gen/: basic_codegen.cpp  basic_codegen.h  builder.cpp  builder.hpp  clib_ref.cpp  codegen.cpp  codegen.h  data.cpp  data.h  includes.h  libc_ref.cpp  libc_ref.h  operators.cpp  operators.h  test.h  types.cpp  types.h
notes/: optimizer_ideas.md  rich_types.md
optimizer/: optimizer_codegen.cpp  optimizer_nodes.cpp  optimizer_nodes.h
preprocess/: preprocessor.cpp  preprocessor.hpp
test_code/: hello_world.on  malloc_test.on  new_struct_syntax.on  test_code1.mu  test_code1.on  test_code2.on  test_code3.on
